@@ -145,3 +145,26 @@ let () =
 
   assert (!s2 == !s1);
   assert(a2 -. a1 = a1 -. a0)
+
+let () =
+  (* check that removing an element from a set that is not present in this set
+     (1) doesn't allocate and (2) return the original set *)
+  let s1 = ref S.empty in
+  for i = 1 to 10 do s1 := S.add i !s1 done;
+  let s2 = ref !s1 in
+
+  let a0 = Gc.allocated_bytes () in
+  let a1 = Gc.allocated_bytes () in
+  for i = 11 to 30 do s2 := S.remove i !s2 done;
+  let a2 = Gc.allocated_bytes () in
+
+  assert (!s2 == !s1);
+  assert(a2 -. a1 = a1 -. a0)
+
+let () =
+  (* check that filtering a set where all elements are satisfied by
+     the given predicate return the original set *)
+  let s1 = ref S.empty in
+  for i = 1 to 10 do s1 := S.add i !s1 done;
+  let s2 = S.filter (fun e -> e >= 0) !s1 in
+  assert (s2 == !s1)
